Updated doc syntax

--- a/docs/exercisebank-doc.tex
+++ b/docs/exercisebank-doc.tex
@@ -1,5 +1,5 @@
-%% exercisebank v0.0.2b4 - 2018/04/01
-%% The LaTeX package exercisebank - version v0.0.2 (2018/04/01) build 4
+%% exercisebank v0.0.2b11 - 2018/04/02
+%% The LaTeX package exercisebank - version v0.0.2 (2018/04/02) build 11
 %% exercisebank.sty
 %% -------------------------------------------------------------------------------------------
 %% Copyright (c) 2018 by Andreas Storvik Strauman
@@ -46,7 +46,7 @@
 \tcbset{documentation listing style=mydocumentation}
 
 \setlength{\parindent}{0pt}
-\title{{Handin - manual\\ v0.0.2{\\[-0.5em]\footnotesize(build 4)}}}
+\title{{Handin - manual\\ v0.0.2{\\[-0.5em]\footnotesize(build 11)}}}
 \author{Andreas Strauman}
 \begin{document}
 \maketitle
@@ -315,4 +315,8 @@ To be used in \refCom{makeset}
 
 
 \section{Changelog}
+\begin{tabular}{lll}
+  Version&Date&Change\\
+  v0.0.2b11&2018/04/02&Updated documentation syntax.
+\end{tabular}
  \end{document}
