--- a/src/isin.tex
+++ b/src/isin.tex
@@ -1,12 +1,11 @@
 % This file contains the definition of the \isin macro
-%\BDOC
-%§ref
-%\isin{haystack}{needle}{True}{False}
-% \meta{haystack} is a comma separated list of integers\\
-% \meta{needle} is an integer\\
-% Executes \meta{True} if \meta{needle} is found in \meta{haystack}
-% else executes \meta{False}
-%\EDOC
+%:§ref
+%:=\isin{haystack}{needle}{True}{False}
+%: \meta{haystack} is a comma separated list of integers\\
+%: \meta{needle} is an integer\\
+%: Executes \meta{True} if \meta{needle} is found in \meta{haystack}
+%: else executes \meta{False}
+%:-
 % #1: haystack
 % #2: needle
 % #3: action if found in list
