--- a/src/problemstyle.tex
+++ b/src/problemstyle.tex
@@ -10,11 +10,10 @@
 \def\solMargin{\dimexpr \ppMargin+\ppMargin\relax}
 \def\vsSize{1em}
 \def\vs{\vspace{\vsSize}}
-%\BDOC
-%§count
-%\!docCounter{problemcounter}-counter holds the current problem number and
-%\!docCounter{partproblemcounter}-counter holds the current partproblem \!emph{number}.
-%\EDOC
+%:§count
+%:\!docCounter{problemcounter}-counter holds the current problem number and
+%:\!docCounter{partproblemcounter}-counter holds the current partproblem \!emph{number}.
+%:-
 \newcounter{problemcounter}
 \setcounter{problemcounter}{0}
 \newcounter{partproblemcounter}
