--- a/src/texpack.tex
+++ b/src/texpack.tex
@@ -1,10 +1,10 @@
 % This is the file that is built when making all these files into packaging
-%\BDOC
-% §env=Environments
-% §lang=Internationalization
-% §triggers=Triggers
-% §ref=General reference
-% §makingSets=Making sets
-% §count=Counters
-%\EDOC
+%:§env=Environments
+%:§lang=Internationalization
+%:§triggers=Triggers
+%:§ref=General reference
+%:§makingSets=Making sets
+%:§count=Counters
+%:-
+
 \input{preamble}
