--- a/src/at.tex
+++ b/src/at.tex
@@ -29,7 +29,7 @@
 %:=\Trigger{Any Macro}
 %: See \refCom{At}\\
 %: Available triggers:\\
-%: !!triggers
+%:$$triggers
 %:-
 \newcommand{\Trigger}[1]{
   \def\macname{\expandafter\removebs\detokenize{#1}}
