--- a/src/envcontrol.tex
+++ b/src/envcontrol.tex
@@ -64,7 +64,7 @@
 %: Things inside here is only visible if \refCom{DisplaySolutions} are given before \begin{document}
 %: \!begin{marker}\end{solution} has to be on it's own line without any leading spaces!\!end{marker}
 %:-
-%:\DisplaySolutions
+%:=\DisplaySolutions
 %:Turns on the solutions, so they are shown.
 %:-
 %% Solutions
