--- a/src/setbuilder.tex
+++ b/src/setbuilder.tex
@@ -187,11 +187,16 @@
     \if\continueLoop\isTrue
 
     %% TRIGGER EVERTYHING
-%\Trigger\InputExercise:Triggers before a file is included
-%\Trigger\BeginProblem:Triggers before a file is included, but only if problem headers are to be written (no [nohead] given)
-%\Trigger\EndProblem:Triggers right after problem is included if [nohead] \emph{not} given
-%\Trigger\BeginBuildset:Triggers right before a set has begun building (not if \dac{sprite} is used). You might want to put your set-header here
-%\Trigger\EndBuildset:Triggers when a set has stopped building (not if \dac{sprite} is used)
+%:$triggers.=\Trigger\InputExercise:\\ Triggers before a file is included\\\
+
+%:$triggers.=\Trigger\BeginProblem:\\ Triggers before a file is included, but only if problem headers are to be written (no [nohead] given)\\
+
+%:$triggers.=\Trigger\EndProblem:\\ Triggers right after problem is included if [nohead] \emph{not} given\\
+
+%:$triggers.=\Trigger\BeginBuildset:\\ Triggers right before a set has begun building (not if \dac{sprite} is used). You might want to put your set-header here\\
+
+%:$triggers.=\Trigger\EndBuildset:\\ Triggers when a set has stopped building (not if \dac{sprite} is used)\\
+
     \Trigger\InputExercise
     \if\nohead\isFalse
       \if\@spriteMode\isFalse
