--- a/documentation-doc.tex
+++ b/documentation-doc.tex
@@ -1,4 +1,4 @@
-The documentation is ultimately formatted by tcolorbox. But it is parsed by a custom script.
+The documentation is ultimately formatted by tcolorbox. But it is parsed from comments in the code by a custom script.
 The syntax for doc parsing is explained through these examples:
 
 It's programmed to end when the next comment is none of the four styles, but to be safe, use:
