--- a/src/preamble.tex
+++ b/src/preamble.tex
@@ -7,7 +7,7 @@
 %:-
 \makeatletter
 \@ifundefined{ownLineNoSpacesGotIt}{
-\@latex@warning{Compilation wont work unless \string\end{problem} and \string\end{solution} are on their own lines and without any spaces. This warning can be removed by doing \string\def\string\ownLineNoSpacesGotIt{} before \string\usepackage{exbank}}
+\@latex@warning{Compilation wont work unless \string\end{problem} and \string\end{solution} are on their own lines and without any spaces. This warning can be removed by doing \string\def\string\ownLineNoSpacesGotIt{} before \@backslashchar usepackage{exbank}}
 }{}
 %:=\setExercisesDir{directory}
 %:This is the directory, relative to the file you included the package,
