Added buildno in .sty file

--- a/src/packagehead.tex
+++ b/src/packagehead.tex
@@ -1,5 +1,5 @@
 % Source (with comments) can be found at https://github.com/Strauman/exerciseBank
-%% The LaTeX package exercisebank - version #VERSION (#DATE)
+%% The LaTeX package exercisebank - version #VERSION (#DATE) - build #BUILD
 %% exercisebank.sty: Exercise bank
 %%
 %% -------------------------------------------------------------------------------------------
