--- a/src/problemstyle.tex
+++ b/src/problemstyle.tex
@@ -27,7 +27,7 @@
   \end{addmargin}
   \vspace*{\pMarginBelow}
 }
-\At\BeginPartproblem{
+\At\VeryBeginPartproblem{
 	\vspace{\ppMargin}%
 	 \begin{addmargin}{\ppMargin}%
 \large\hspace*{-\ppMargin}\textbf{(\theproblemcounter\alph{partproblemcounter})}\normalsize
