--- a/docs/changelog.tex
+++ b/docs/changelog.tex
@@ -1,4 +1,13 @@
-\begin{tabular}{lll}
+%!TEX root = exercisebank-doc.tex
+\begin{tabularx}{\textwidth}{llX}
   Version&Date&Change\\
-  v0.0.2b11&2018/04/02&Updated documentation syntax.
-\end{tabular}
+  v0.0.2b11&2018/04/02&Updated documentation syntax.\\
+  v0.0.3b38&2018/04/03&\nobreak\begin{itemize}
+    \item Updated triggers doc
+    \item added trigger \dac{VeryBeginPartproblem}
+  \end{itemize}\\
+  v0.0.3b39&2018/04/03&\begin{itemize}
+    \item Added examples that uses the \dac{At} command.
+      Making front page and other snacks
+  \end{itemize}\\
+\end{tabularx}
