--- a/exercisebank.sty
+++ b/exercisebank.sty
@@ -1,5 +1,5 @@
 % Source (with comments) can be found at https://github.com/Strauman/exerciseBank
-%% The LaTeX package exercisebank - version v0.0.2 (2018/04/03) - build 37
+%% The LaTeX package exercisebank - version v0.0.3 (2018/04/03) - build 38
 %% exercisebank.sty: Exercise bank
 %% -------------------------------------------------------------------------------------------
 %% Copyright (c) 2018 by Andreas Storvik Strauman <andreas dot s dot strauman at uit dot no>
@@ -13,7 +13,7 @@
 %% version 2008/05/04 or later.
 %% This work has the LPPL maintenance status `author-maintained'.
 %% This work consists of all files listed in README
-\ProvidesPackage{exercisebank}[2018/04/03 v0.0.2 Creates a setup that gives freedom in making sets and exercises.]
+\ProvidesPackage{exercisebank}[2018/04/03 v0.0.3 Creates a setup that gives freedom in making sets and exercises.]
 \@ifundefined{ownLineNoSpacesGotIt}{\@latex@warning{Compilation wont work unless \string\end{problem} and \string\end{solution} are on their own lines and without any spaces. This warning can be removed by doing \string\def\string\ownLineNoSpacesGotIt{} before \@backslashchar usepackage{exbank}}
 }{}
 \gdef\setExercisesDir#1{\gdef\exercisesDir{#1}}
@@ -71,7 +71,7 @@
   \end{addmargin}
   \vspace*{\pMarginBelow}
 }
-\At\BeginPartproblem{	\vspace{\ppMargin}%
+\At\VeryBeginPartproblem{	\vspace{\ppMargin}%
 	 \begin{addmargin}{\ppMargin}%
 \large\hspace*{-\ppMargin}\textbf{(\theproblemcounter\alph{partproblemcounter})}\normalsize
   \stepcounter{partproblemcounter}
@@ -101,6 +101,7 @@
   \if\@displayMetaCounter\isTrue%
     {P:\Large\themetacounter}
     \Trigger\BeginPartproblem
+    \Trigger\VeryBeginPartproblem
     \gdef\DisplayProblem{\isTrue}
   \else
     \if\DisplayProblem\isFalse
@@ -113,7 +114,9 @@
 \generalcomment{problem}{  \edef\DisplaySolution{\@DisplaySolutions}
   \Trigger\DecideProblemDisplay
   \begingroup
-     \showhideproblem{\Trigger\BeginPartproblem}
+     \showhideproblem{      \Trigger\BeginPartproblem
+      \Trigger\VeryBeginPartproblem
+}
 }{    \if\DisplayProblem\isFalse\else
       \Trigger\EndPartproblem
     \fi
