--- a/src/packagehead.tex
+++ b/src/packagehead.tex
@@ -1,5 +1,5 @@
 % Source (with comments) can be found at https://github.com/Strauman/exerciseBank
-%% The LaTeX package exercisebank - version #VERSION (#DATE) - build #BUILD
+%% The LaTeX package exercisebank - version @@VERSION (@@DATE) - build @@BUILD
 %% exercisebank.sty: Exercise bank
 %%
 %% -------------------------------------------------------------------------------------------
@@ -18,4 +18,4 @@
 %%
 %% This work consists of all files listed in README
 %%
-\ProvidesPackage{exercisebank}[#DATE #VERSION Creates a setup that gives freedom in making sets and exercises.]
+\ProvidesPackage{exercisebank}[@@DATE @@VERSION Creates a setup that gives freedom in making sets and exercises.]
