--- a/docs/exercisebank-doc.tex
+++ b/docs/exercisebank-doc.tex
@@ -1,5 +1,5 @@
-%% exercisebank v0.0.3b40 - 2018/04/03
-%% The LaTeX package exercisebank - version v0.0.3 (2018/04/03) build 40
+%% exercisebank v0.0.3b42 - 2018/04/03
+%% The LaTeX package exercisebank - version v0.0.3 (2018/04/03) build 42
 %% exercisebank.sty
 %% -------------------------------------------------------------------------------------------
 %% Copyright (c) 2018 by Andreas Storvik Strauman
@@ -54,12 +54,12 @@
 
 
 \setlength{\parindent}{0pt}
-\title{{Handin - manual\\ v0.0.3{\\[-0.5em]\footnotesize(build 40)}}}
+\title{{Handin - manual\\ v0.0.3{\\[-0.5em]\footnotesize(build 42)}}}
 \author{Andreas Strauman}
 \begin{document}
 \maketitle
  
-If you found any bugs or want new functionality, to contribute, view the commented source, get latest version of this package or get in touch with me, you can do all of that at \url{#GITHUB}
+If you found any bugs or want new functionality, to contribute, view the commented source, get latest version of this package or get in touch with me, you can do all of that at \url{https://github.com/Strauman/exerciseBank/}
 \tableofcontents
 \clearpage
 \section{Motivation}
